--- a/web/src/app/form/checkbox.component.html
+++ b/web/src/app/form/checkbox.component.html
@@ -6,176 +6,148 @@
     <h2 class="title is-3">Basic Usage</h2>
 
     <div class="block">
+      <p>label.checkbox</p>
+      <p class="push-left-1">input[type="checkbox"]</p>
+      <p class="push-left-1">span</p>
+      <p class="push-left-2">TEXT</p>
+    </div>
+
+    <div class="block">
       <label class="checkbox">
         <input type="checkbox">
-        <span>check me</span>
+        <span>.checkbox</span>
       </label>
     </div>
 
     <h2 class="title is-3">Modifier</h2>
 
     <div class="block">
-      <div class="block">
-        is-text-color
-      </div>
-      <div class="block">
-        <label class="checkbox is-text-color">
+      <label class="checkbox is-text-color">
+        <input type="checkbox">
+        <span>.checkbox.is-text-color</span>
+      </label>
+    </div>
+
+    <div class="block">
+      <label class="checkbox is-filled">
+        <input type="checkbox">
+        <span>.checkbox.is-filled</span>
+      </label>
+    </div>
+
+    <div class="block">
+      .checkbox-group
+      <div class="checkbox-group">
+        <div class="checkbox-title">
+          .checkbox-title
+        </div>
+        <label class="checkbox">
           <input type="checkbox">
-          <span>check me</span>
+          <span>.checkbox</span>
+        </label>
+        <label class="checkbox">
+          <input type="checkbox">
+          <span>.checkbox</span>
         </label>
       </div>
     </div>
 
     <div class="block">
-      <div class="block">
-        is-filled
-      </div>
-      <div class="block">
-        <label class="checkbox is-filled">
+      .checkbox-group.is-horizontal
+      <div class="checkbox-group is-horizontal">
+        <div class="checkbox-title">
+          .checkbox-title
+        </div>
+        <label class="checkbox">
           <input type="checkbox">
-          <span>check me</span>
+          <span>.checkbox</span>
+        </label>
+        <label class="checkbox">
+          <input type="checkbox">
+          <span>.checkbox</span>
         </label>
       </div>
     </div>
 
     <div class="block">
-      <div class="block">
-        checkbox-group
-      </div>
-      <div class="block">
-        <div class="checkbox-group">
-          <div class="checkbox-title">
-            checkbox title
-          </div>
-          <label class="checkbox">
-            <input type="checkbox">
-            <span>check me</span>
-          </label>
-          <label class="checkbox">
-            <input type="checkbox">
-            <span>check me</span>
-          </label>
+      .checkbox-group.is-horizontal.has-divide
+      <div class="checkbox-group is-horizontal has-divide">
+        <div class="checkbox-title">
+          .checkbox-title
         </div>
+        <label class="checkbox">
+          <input type="checkbox">
+          <span>.checkbox</span>
+        </label>
+        <label class="checkbox">
+          <input type="checkbox">
+          <span>.checkbox</span>
+        </label>
       </div>
     </div>
 
     <div class="block">
-      <div class="block">
-        checkbox-group is-horizontal
-      </div>
-      <div class="block">
-        <div class="checkbox-group is-horizontal">
-          <div class="checkbox-title">
-            checkbox title
-          </div>
-          <label class="checkbox">
-            <input type="checkbox">
-            <span>check me</span>
-          </label>
-          <label class="checkbox">
-            <input type="checkbox">
-            <span>check me</span>
-          </label>
+      .checkbox-group.is-horizontal.is-bordered
+      <div class="checkbox-group is-horizontal is-bordered">
+        <div class="checkbox-title">
+          .checkbox-title
         </div>
+        <label class="checkbox">
+          <input type="checkbox">
+          <span>.checkbox</span>
+        </label>
+        <label class="checkbox">
+          <input type="checkbox">
+          <span>.checkbox</span>
+        </label>
       </div>
     </div>
 
     <div class="block">
-      <div class="block">
-        checkbox-group is-horizontal has-divide
-      </div>
-      <div class="block">
-        <div class="checkbox-group is-horizontal has-divide">
-          <div class="checkbox-title">
-            checkbox title
-          </div>
-          <label class="checkbox">
-            <input type="checkbox">
-            <span>check me</span>
-          </label>
-          <label class="checkbox">
-            <input type="checkbox">
-            <span>check me</span>
-          </label>
+      .checkbox-group.is-horizontal.is-bordered
+      <div class="checkbox-group is-horizontal is-bordered">
+        <div class="checkbox-title is-filled">
+          .checkbox-title.is-filled
         </div>
+        <label class="checkbox">
+          <input type="checkbox">
+          <span>.checkbox</span>
+        </label>
+        <label class="checkbox">
+          <input type="checkbox">
+          <span>.checkbox</span>
+        </label>
       </div>
     </div>
 
     <div class="block">
-      <div class="block">
-        checkbox-group is-horizontal is-bordered
-      </div>
-      <div class="block">
-        <div class="checkbox-group is-horizontal is-bordered">
-          <div class="checkbox-title">
-            checkbox title
-          </div>
-          <label class="checkbox">
-            <input type="checkbox">
-            <span>check me</span>
-          </label>
-          <label class="checkbox">
-            <input type="checkbox">
-            <span>check me</span>
-          </label>
+      .checkbox-group.is-horizontal.is-bordered.is-[color]
+      <div class="checkbox-group is-horizontal is-bordered is-secondary">
+        <div class="checkbox-title is-filled">
+          .checkbox-title.is-filled
         </div>
+        <label class="checkbox">
+          <input type="checkbox">
+          <span>.checkbox</span>
+        </label>
+        <label class="checkbox">
+          <input type="checkbox">
+          <span>.checkbox</span>
+        </label>
       </div>
     </div>
-
-    <div class="block">
-      <div class="block">
-        checkbox-title is-filled
-      </div>
-      <div class="block">
-        <div class="checkbox-group is-horizontal is-bordered">
-          <div class="checkbox-title is-filled">
-            checkbox title
-          </div>
-          <label class="checkbox">
-            <input type="checkbox">
-            <span>check me</span>
-          </label>
-          <label class="checkbox">
-            <input type="checkbox">
-            <span>check me</span>
-          </label>
-        </div>
-      </div>
-    </div>
-
-    <div class="block">
-      <div class="block">
-        checkbox-group is-horizontal is-bordered is-[color]
-      </div>
-      <div class="block">
-        <div class="checkbox-group is-horizontal is-bordered is-primary">
-          <div class="checkbox-title is-filled">
-            checkbox title
-          </div>
-          <label class="checkbox">
-            <input type="checkbox">
-            <span>check me</span>
-          </label>
-          <label class="checkbox">
-            <input type="checkbox">
-            <span>check me</span>
-          </label>
-        </div>
-      </div>
-    </div>
-
-
 
     <h2 class="title is-3">Variables</h2>
-
     <div class="block">
-      <p>$checkbox-checked-color: $primary;</p>
-      <p>$checkbox-checked-border-color: $primary;</p>
-      <p>$checkbox-checked-filled-background-color: $primary;</p>
-      <p>$checkbox-group-border-color: $border;</p>
-      <p>$checkbox-group-divide-color: $border;</p>
-      <p>$checkbox-title-filled-background-color: $primary;</p>
-      <p>$checkbox-title-filled-color: $primary-invert;</p>
+      <p>$checkbox-size: 1em;</p>
+      <p>$checkbox-inner-size: $checkbox-size * 0.8;</p>
+      <p>$checkbox-checked-color: variables.$primary;</p>
+      <p>$checkbox-checked-border-color: variables.$primary;</p>
+      <p>$checkbox-checked-filled-background-color: variables.$primary;</p>
+      <p>$checkbox-group-border-color: variables.$border;</p>
+      <p>$checkbox-group-divide-color: variables.$border;</p>
+      <p>$checkbox-title-filled-background-color: variables.$primary;</p>
+      <p>$checkbox-title-filled-color: variables.$primary-invert;</p>
     </div>
 
   </div>
