--- a/web/src/app/shape/circle.component.html
+++ b/web/src/app/shape/circle.component.html
@@ -6,25 +6,22 @@
     <h2 class="title is-3">Basic Usage</h2>
 
     <div class="block">
+      .circle
       <div class="circle"></div>
     </div>
 
     <h2 class="title is-3">Modifier</h2>
 
     <div class="block">
-      color = is-[color]
-    </div>
-    <div class="block">
+      .circle.is-[color]
       <div class="circle is-primary"></div>
     </div>
 
     <div class="block">
-      size = element font size
+      Adjust size with element font size
     </div>
     <div class="block">
-      <div class="text-size-large">
-        <div class="circle"></div>
-      </div>
+      <div class="circle text-size-large"></div>
     </div>
 
   </div>
