--- a/web/src/app/shape/triangle.component.html
+++ b/web/src/app/shape/triangle.component.html
@@ -6,37 +6,39 @@
     <h2 class="title is-3">Basic Usage</h2>
 
     <div class="block">
+      .triangle-up
       <div class="triangle-up"></div>
     </div>
 
     <div class="block">
+      .triangle-down
       <div class="triangle-down"></div>
     </div>
 
     <div class="block">
+      .triangle-left
       <div class="triangle-left"></div>
     </div>
 
     <div class="block">
+      .triangle-right
       <div class="triangle-right"></div>
     </div>
 
     <h2 class="title is-3">Modifier</h2>
 
     <div class="block">
-      color = is-[color]
+      .is-[color]
     </div>
     <div class="block">
       <div class="triangle-up is-primary"></div>
     </div>
 
     <div class="block">
-      size = element font size
+      Adjust size with element font size
     </div>
     <div class="block">
-      <div class="text-size-large">
-        <div class="triangle-up"></div>
-      </div>
+      <div class="triangle-up text-size-large"></div>
     </div>
 
   </div>
