--- a/web/src/app/form/select.component.html
+++ b/web/src/app/form/select.component.html
@@ -15,6 +15,11 @@
     <h2 class="title is-3">Basic Usage</h2>
 
     <div class="block">
+      <p>.select</p>
+      <p class="push-left-1">select</p>
+    </div>
+
+    <div class="block">
       <div class="select">
         <select>
           <option>Select dropdown</option>
@@ -26,17 +31,39 @@
     <h2 class="title is-3">Modifier</h2>
 
     <div class="block">
-      is-borderless
+      .select.is-borderless
     </div>
     <div class="block">
-      <div class="block">
-        <div class="select is-borderless">
-          <select>
-            <option>Select dropdown</option>
-            <option>With options</option>
-          </select>
-        </div>
+      <div class="select is-borderless">
+        <select>
+          <option>Select dropdown</option>
+          <option value="1">With options</option>
+        </select>
       </div>
+    </div>
+
+    <div class="block">
+      <p>.select</p>
+      <p class="push-left-1">select.show-placeholde</p>
+    </div>
+    <div class="block">
+      <div class="select">
+        <select
+          #mySelect
+          [class.show-placeholder]="!value"
+          (change)="value = mySelect.value"
+        >
+          <option value="">Select dropdown</option>
+          <option value="1">With options</option>
+        </select>
+      </div>
+    </div>
+
+    <h2 class="title is-3">Changes</h2>
+    <div class="block">
+      <p>Add is-borderless</p>
+      <p>Add show-placeholder that can place at select tag. If show-placeholder is appear, the display text is
+        look like placeholder</p>
     </div>
 
   </div>
