--- a/web/src/app/component/tab.component.html
+++ b/web/src/app/component/tab.component.html
@@ -4,7 +4,7 @@
     <h1 class="title is-1">Tab</h1>
 
     <div class="block">
-      See More: <a
+      Extend from: <a
         href="https://bulma.io/documentation/components/tabs"
         target="_blank"
       >
