--- a/web/src/app/form/form.component.html
+++ b/web/src/app/form/form.component.html
@@ -4,7 +4,7 @@
     <h1 class="title is-1">Form</h1>
 
     <div class="block">
-      See More: <a
+      Extend from: <a
         href="https://bulma.io/documentation/form/general"
         target="_blank"
       >
