--- a/web/src/app/general/brick-block.component.html
+++ b/web/src/app/general/brick-block.component.html
@@ -6,7 +6,7 @@
     </h1>
 
     <div class="block">
-      See More: <a
+      Extend from: <a
         href="https://bulma.io/documentation/elements/block"
         target="_blank"
       >
