--- a/web/src/app/general/helper.component.html
+++ b/web/src/app/general/helper.component.html
@@ -7,7 +7,7 @@
 
     <div class="block">
       <div class="brick">
-        See More: <a
+        Extend from: <a
           href="https://bulma.io/documentation/helpers/other-helpers/"
           target="_blank"
         >
