--- a/web/src/app/element/button.component.html
+++ b/web/src/app/element/button.component.html
@@ -4,7 +4,7 @@
     <h1 class="title is-1">Button</h1>
 
     <div class="block">
-      See More: <a
+      Extend from: <a
         href="https://bulma.io/documentation/elements/button"
         target="_blank"
       >
