--- a/lib/src/utilities/variables.scss
+++ b/lib/src/utilities/variables.scss
@@ -18,6 +18,8 @@ $size-large: 2.4rem !default;
 $size-xlarge: 2.8rem !default;
 $size-xxlarge: 3.2rem !default;
 
+$font-family: '"Inter", "SF Pro", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Helvetica Neue", "Helvetica", "Arial", sans-serif' !default;
+
 $font-sizes: (
   "size-small": $size-small,
   "size-normal": $size-normal,
