--- a/web/src/app/element/icon.component.html
+++ b/web/src/app/element/icon.component.html
@@ -113,7 +113,7 @@
       </div>
       <div class="block">
         <div class="icon-text text-size-medium is-align-center">
-          <span class="icon icon-img"><img src="images/coin.png"></span><span>Image Icon</span>
+          <span class="icon icon-img"><img src="images/trunks-ui-mini.png"></span><span>Image Icon</span>
         </div>
       </div>
     </div>
