--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -2,7 +2,9 @@
 
 @use "../../lib/src/trunks" with ( 
     // Font Family
-    $family-sans-serif: 'BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif',
+    $family-primary: '#{variables.$font-family}',
+    $family-secondary: '#{variables.$font-family}',
+    $family-code: '#{variables.$font-family}',
 
     // label
     $label-color: variables.$text-strong,
@@ -18,6 +20,7 @@
     $modal-card-title-size: variables.$size-large,
 
     // navbar
+    $navbar-item-img-max-height: 54px,
     $navbar-dropdown-arrow: variables.$text,
 
     // trunks ui
